--- a/log.html
+++ b/log.html
@@ -25,7 +25,7 @@
             </div>  
             <br>
             <div class="container">
-                <form action="login.php" method="POST">
+                <form action="testlogin.php" method="POST">
                     <div class="form-group">
                         <h3>Log in to place an order!</h3>
                         Don't have an account? <a href="reg.html">Sign Up</a>
