--- a/passnotmatch.html
+++ b/passnotmatch.html
@@ -25,9 +25,10 @@
       <div class="container">
         <form action="testlogin.php" method="POST">
             <div class="form-group">
-                <h3 id="error">Passwords do not match!</h3>
-                <h4>Try again? <a href="log.html">Sign Up</a></h4>
+                <h3>Signing Up is quick and easy!</h3>
                 Already have an account? <a href="log.html">Log In</a>
+                <h3 id="error">Passwords do not match!</h3>
+                <h4>Try again? <a href="reg.html">Sign Up</a></h4>
             </div>
         </form>
     </div>
