--- a/account.html
+++ b/account.html
@@ -1,7 +1,6 @@
 <html>
     <!DOCTYPE html>
-    <html lang="en">    
-    <head>
+    <html lang="en">    <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Little Lemon</title>
@@ -10,7 +9,7 @@
     <body>
         <a href="home.html"><img src="https://www.48hourslogo.com/oss/attachments/2022/01/13/347418572/fce5b08add13e667d5855320c8ab6b39.png" alt="logo" width="140px"> </a>
         <hr>
-        <h1 align="center" id="header">Log In</h1>
+        <h1 align="center" id="header">Welcome to Little Lemon</h1>
         <hr>
         <div>
           <nav class="nav">
@@ -20,22 +19,12 @@
             <button class="navbtn"><li><a href="/about.html">About</a></li></button>
           </ul>
         </nav>
-      </div> 
-   <br>
-      <div class="container">
-        <form action="testlogin.php" method="POST">
-            <div class="form-group">
-              <h3>Log In to place an order!</h3>
-              Don't have an account? <a href="reg.html">Sign Up</a>  
-              <h3 id="error">Incorrect password and email combination!</h3>
-              <h4>Try again? <a href="log.html">Log In</a></h4>
-            </div>
-        </form>
-    </div>
-    <br><br><br>
+      </div>
 
-    
-    <script type="text/javascript" src="script.js"></script>
-  </body>
-  </html>
+
+
+
+      <script type="text/javascript" src="script.js"></script>
+    </body>
+    </html>
 </html>
