--- a/emailnot.html
+++ b/emailnot.html
@@ -16,7 +16,7 @@
           <nav class="nav">
           <ul>
             <button class="navbtn"><li><a href="/home.html">Home</a></li></button>
-            <button class="navbtn"><li><a href="/log.html">Order</a></li></button>
+            <button class="navbtn"><li><a href="/account.html">Order</a></li></button>
             <button class="navbtn"><li><a href="/about.html">About</a></li></button>
           </ul>
         </nav>
@@ -25,9 +25,10 @@
       <div class="container">
         <form action="testlogin.php" method="POST">
             <div class="form-group">
-                <h3 id="error">There is no account associated with that email!</h3>
+              <h3>Log In to place an order!</h3>
+              Don't have an account? <a href="reg.html">Sign Up</a>    
+              <h3 id="error">There is no account associated with that email!</h3>
                 <h4>Try again? <a href="log.html">Log In</a></h4>
-                Don't have an account? <a href="reg.html">Sign Up</a>
             </div>
         </form>
     </div>
