--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
           <nav class="nav">
           <ul>
             <button class="navbtn"><li><a href="/home.html">Home</a></li></button>
-            <button class="navbtn"><li><a href="/log.html">Order</a></li></button>
+            <button class="navbtn"><li><a href="/account.html">Order</a></li></button>
             <button class="navbtn"><li><a href="/about.html">About</a></li></button>
           </ul>
         </nav>
