--- a/log.html
+++ b/log.html
@@ -17,7 +17,7 @@
                 <nav class="nav">
                 <ul>
                   <button class="navbtn"><li><a href="/home.html">Home</a></li></button>
-                  <button class="navbtn"><li><a href="/log.html">Order</a></li></button>
+                  <button class="navbtn"><li><a href="/account.html">Order</a></li></button>
                   <button class="navbtn"><li><a href="/about.html">About</a></li></button>
                 </ul>
               </nav>
@@ -27,7 +27,7 @@
             <div class="container">
                 <form action="testlogin.php" method="POST">
                     <div class="form-group">
-                        <h3>Log in to place an order!</h3>
+                        <h3>Log In to place an order!</h3>
                         Don't have an account? <a href="reg.html">Sign Up</a>
                     </div>
                     <div class="form-group">
