--- a/account.html
+++ b/account.html
@@ -21,6 +21,26 @@
         </nav>
       </div>
 
+      <br>
+      <div class="container">
+          <form>
+              <div class="form-group">
+                  <h3>Satisfy Your Cravings!</h3>
+                    New here? Sign up to get started. <br><br>
+                    Been here before? Log In to see what we have for you today!
+              </div>
+              <div class="form-group">
+                  <nav class="nav">
+                    <ul>
+                        <button class="navbtn"><li><a href="/reg.html">Sign Up</a></li></button>
+                        <button class="navbtn"><li><a href="/log.html">Log In</a></li></button>
+                    </ul>
+                </nav>
+              </div>
+          </form>
+      </div>
+      <br><br><br>
+
 
 
 
